--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -147,6 +147,10 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\Users\Luiz\Downloads\glad\src\glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
