Textures chapter done - added mixed container and awesome face mixed on a retangle

--- a/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
