--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="..\..\..\Users\Luiz\Downloads\glad\src\glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h" />
