--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -167,6 +167,8 @@
     <Image Include="textures\container.jpg" />
     <Image Include="textures\container2.png" />
     <Image Include="textures\container2_specular.png" />
+    <Image Include="textures\lighting_maps_specular_color.png" />
+    <Image Include="textures\matrix.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
